--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <div class="container main-container">
 
-    <!-- <router-outlet></router-outlet> -->
+    <router-outlet></router-outlet>
 </div>
