Showing billboard movies, populars and kids movies.

--- a/src/app/components/home/gallery.component.html
+++ b/src/app/components/home/gallery.component.html
@@ -1,3 +1,34 @@
-<p>
-  gallery works!
-</p>
+<br><br>
+
+<h1>{{ title }}</h1>
+<hr>
+
+<div class="row animated fadeIn fast" *ngIf="movies">
+    <div class="col-sm-6">
+        <div class="row">
+            <div class="col-md-12 div-pic-1" [ngStyle]="{ 'background-image': 'url('+ ( movies[0] | movieImage ) +')' }">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url('+ ( movies[1] | movieImage ) +')' }">
+            </div>
+            <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url('+ ( movies[2] | movieImage ) +')' }">
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6">
+        <div class="row">
+            <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url('+ ( movies[3] | movieImage ) +')' }">
+            </div>
+            <div class="col-sm-6 div-pic-2" [ngStyle]="{ 'background-image': 'url('+ ( movies[4] | movieImage ) +')' }">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 div-pic-1" [ngStyle]="{ 'background-image': 'url('+ ( movies[5] | movieImage ) +')' }">
+            </div>
+        </div>
+    </div>
+</div>
