--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,31 @@
-<p>
-  search works!
-</p>
+<div class="container main-container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label>Search:</label>
+                <input
+                        [(ngModel)]="movieName"
+                        name="movieName"
+                        (keyup.enter)="searchMovie()"
+                        type="tex"
+                        class="form-control"
+                        placeholder="Search movie">
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card-columns">
+                <div class="card" *ngFor="let movie of _moviesService.movies">
+                    <img [src]="movie | movieImage" [alt]="movie.original_title" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ movie.original_title }}</h4>
+                        <p class="card-text">{{ movie.overview | slice:0:240 }}...</p>
+                        <button class="btn btn-outline-primary btn-block">View more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
