Show details of the movie.

--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,3 +1,19 @@
-<p>
-  movie works!
-</p>
+<div *ngIf="movie" class="container main-container animated fadeIn fast">
+    <h1>{{ movie.original_title }}</h1>
+    <div class="row">
+        <div class="col-md-5">
+             <img class="img-thumbnail img-fluid" [src]="movie | movieImage:true" [alt]="movie.original_title">
+        </div>
+
+        <div class="col-md-7">
+            <h3>Synopsis</h3>
+            <hr>
+            <p>{{ movie.overview }}</p>
+            <p>
+                Popularity: <span class="badge badge-primary">{{ movie.popularity }}</span>
+                <br>
+                Vote Average: <span class="badge badge-primary">{{ movie.vote_average }}</span>
+            </p>
+        </div>
+    </div>
+</div>
