Add button for to back.

--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -14,6 +14,8 @@
                 <br>
                 Vote Average: <span class="badge badge-primary">{{ movie.vote_average }}</span>
             </p>
+
+            <button type="button" class="btn btn-outline-success" [routerLink]="['/'+pageOrigin]">Back</button>
         </div>
     </div>
 </div>
