--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -15,7 +15,7 @@
                 Vote Average: <span class="badge badge-primary">{{ movie.vote_average }}</span>
             </p>
 
-            <button type="button" class="btn btn-outline-success" [routerLink]="['/'+pageOrigin]">Back</button>
+            <button type="button" class="btn btn-outline-success" [routerLink]="['/' + pageOrigin, movieName]">Back</button>
         </div>
     </div>
 </div>
