Show title of the movie on the home page.

--- a/src/app/components/home/gallery.component.html
+++ b/src/app/components/home/gallery.component.html
@@ -9,6 +9,9 @@
             <div class="col-md-12 div-pic-1 puntero"
                 [routerLink]="['/movie', movies[0].id, 'home']"
                 [ngStyle]="{ 'background-image': 'url('+ ( movies[0] | movieImage ) +')' }">
+                <p class="pic-titulo">
+                    {{ movies[0].original_title }}
+                </p>
             </div>
         </div>
 
@@ -16,10 +19,16 @@
             <div class="col-sm-6 div-pic-2 puntero"
                 [routerLink]="['/movie', movies[1].id, 'home']"
                 [ngStyle]="{ 'background-image': 'url('+ ( movies[1] | movieImage ) +')' }">
+                <p class="pic-titulo">
+                    {{ movies[1].original_title }}
+                </p>
             </div>
             <div class="col-sm-6 div-pic-2 puntero"
                 [routerLink]="['/movie', movies[2].id, 'home']"
                 [ngStyle]="{ 'background-image': 'url('+ ( movies[2] | movieImage ) +')' }">
+                <p class="pic-titulo">
+                    {{ movies[2].original_title }}
+                </p>
             </div>
         </div>
     </div>
@@ -29,10 +38,16 @@
             <div class="col-sm-6 div-pic-2 puntero"
                 [routerLink]="['/movie', movies[3].id, 'home']"
                 [ngStyle]="{ 'background-image': 'url('+ ( movies[3] | movieImage ) +')' }">
+                <p class="pic-titulo">
+                    {{ movies[3].original_title }}
+                </p>
             </div>
             <div class="col-sm-6 div-pic-2 puntero"
                 [routerLink]="['/movie', movies[4].id, 'home']"
                 [ngStyle]="{ 'background-image': 'url('+ ( movies[4] | movieImage ) +')' }">
+                <p class="pic-titulo">
+                    {{ movies[4].original_title }}
+                </p>
             </div>
         </div>
 
@@ -40,6 +55,9 @@
             <div class="col-md-12 div-pic-1 puntero"
                 [routerLink]="['/movie', movies[5].id, 'home']"
                 [ngStyle]="{ 'background-image': 'url('+ ( movies[5] | movieImage ) +')' }">
+                <p class="pic-titulo">
+                    {{ movies[5].original_title }}
+                </p>
             </div>
         </div>
     </div>
